assets/css/style.css
/* ... */
.header__container {
  opacity: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  height: 83px;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.lang-box__label-ru {
  display: flex;
}

.header__select-language a {
  color: #aaa;
}

.header__logo {
  font-family: "Lora";
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 130%;
  color: #1C1B1B;
  margin-right: 95px;
}

.header__logo a {
  color: #1C1B1B;
}

.header__mobile-menu {
  display: none;
}

.header__mobile-menu.active {
  display: block;
}

.header__btn-order {

  display: block;
  margin-left: auto;
  background: #9E2220;
  border-radius: 5px;
  min-width: 174px;
  height: 42px;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 17px;
  color: #FFFFFF;
  margin: 0 auto;
}

.front-section .header__btn-order {
  margin-top: 40px;
}

.header__btn-order:hover {
  background: #FFFFFF;
  border: 1px solid #1C1B1B;
  color: #1C1B1B;
}

.header__btn-mobile-menu {
  background-color: #FFFFFF;
  min-width: 30px;
  min-height: 30px;
  display: none;
  position: absolute;
}

.header__btn-mobile-menu span {
  background: #9E2220;
  border-radius: 1px;
  display: block;
  height: 1px;
  width: 30px;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}

.header__btn-mobile-menu span:not(:last-child) {
  margin-bottom: 5px;
}

.header__btn-mobile-menu.active .btn-mobile-menu__line-up {
  position: relative;
  top: 3px;
  left: 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.header__btn-mobile-menu.active .btn-mobile-menu__line-middle {
  display: none;
}

.header__btn-mobile-menu.active .btn-mobile-menu__line-bottom {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  position: relative;
  top: -3px;
  left: 0;
}

.header__menu {
  margin-right: 50px;
  position: relative;
  z-index: 50;
  max-width: 547px;
}

.menu__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.menu__item {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.menu__item:not(:last-child) {
  margin-right: 40px;
}

.menu__link {
  font-family: "Inter";
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 18px;
  color: #1C1B1B;
}

.menu__link:before {
  content: "";
  -webkit-transform-origin: 100% 50%;
  -ms-transform-origin: 100% 50%;
  transform-origin: 100% 50%;
  -webkit-transform: scale3d(0, 1, 1);
  transform: scale3d(0, 1, 1);
  -webkit-transition: -webkit-transform 0.3s;
  transition: -webkit-transform 0.3s;
  -o-transition: transform 0.3s;
  transition: transform 0.3s;
  transition: transform 0.3s, -webkit-transform 0.3s;
}

.menu__link:hover::before {
  -webkit-transform-origin: 0% 50%;
  -ms-transform-origin: 0% 50%;
  transform-origin: 0% 50%;
  -webkit-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
}

.menu__link::before,
.menu__link::after {
  position: absolute;
  width: 100%;
  height: 1px;
  background: #9E2220;
  bottom: 0;
  pointer-events: none;
}

.header__select-city {
  margin-right: auto;
  padding-right: 30px;
}

.select-city {
  position: relative;
  z-index: 15;
}

.select-city__select {
  position: relative;
  width: 189px;
  height: 18px;
  margin: 0 auto;
}

.select-city__select[data-state=active] .select-city__title::after {
  position: relative;
  top: 2px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.select-city__select[data-state=active] .select-city__content {
  opacity: 1;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.select-city__select[data-state=active] .select-city__label+.select-city__input+.select-city__label {
  max-height: 49px;
}

.select-city__title {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 18px;
  color: #1C1B1B;
}

.select-city__title::before {
  content: "City:";
  position: relative;
  top: 0;
  margin: 0px 5px 0px 0px;
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 18px;
  color: #8A8A8A;
}

.select-city__title::after {
  content: url(/img/header/arrow.svg);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  position: relative;
  top: -2px;
  left: 5px;
  display: block;
}

.select-city__content {
  position: absolute;
  top: 23px;
  left: 0px;
  display: none;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 316px;
  background: #FFFFFF;
  -webkit-box-shadow: 0px 6px 24px rgba(0, 0, 0, 0.08);
  box-shadow: 0px 6px 24px rgba(0, 0, 0, 0.08);
  -webkit-transition: all 0.3s ease-out;
  -o-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
  opacity: 0;
  z-index: -5;
}

.select-city__input {
  display: none;
}
/* ... */

